219 - Layout spacing fixes for several items

--- a/styleguide/source/assets/scss/00-base/mixins/_ma-reset-rich-text.scss
+++ b/styleguide/source/assets/scss/00-base/mixins/_ma-reset-rich-text.scss
@@ -1,6 +1,6 @@
 @mixin ma-reset-rich-text {
   .ma__rich-text {
-    margin-bottom: 0;
+    margin: 0;
     padding-left: 0;
     padding-right: 0;
   }
